# ray_tracing

./: .gitignore  15.ppm  9.ppm  BVH.h  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  bvh_node.h  camera.cpp  camera.h  cmake_install.cmake  hitable.cpp  hitable.h  hitablelist.cpp  hitablelist.h  main.cpp  main.cu  material.h  moving_sphere.h  perlin.h  ray.cpp  ray.h  ray_tracing.cbp  s_random.h  sphere.cpp  sphere.h  stb_image.h  texture.h  vec3.cpp  vec3.h
Geometry/: box.h  cornel_box.h  cornell_box.h  flip.h  hitable.h  hitablelist.h  moving_sphere.h  rectangle.h  rotate_y.h  sphere.h  translate.h  triangle.h
Material/: diffuse_light.h  material.h  perlin.h
geometry/: flip.h  hitable.h  hitablelist.h  moving_sphere.h  rectangle.h  rotate_y.h  sphere.h  triangle.h
include/: camera.h  ray.h  vec3.h
include/geometry/: cornell_box.h  flip.h  hitable.h  hitablelist.h  moving_sphere.h  rectangle.h  rotate_y.h  sphere.h  translate.h  triangle.h
include/material/: material.h  perlin.h  texture.h
include/utils/: s_random.h
material/: material.h  perlin.h  texture.h
ppm_dir/: 10.ppm  11.ppm  12.ppm  14.ppm  16.ppm  17.ppm  18.ppm  19.ppm  21(光源only).ppm  22(环境光only).ppm  23(物体自发光).ppm  24.ppm  25.ppm  26(weired BRDF).ppm  27(左brdf右naive lamb).ppm  29.ppm  7.ppm  8.ppm  9.ppm
