cmake_minimum_required(VERSION 3.12)
project(ray_tracing CXX )
set(CMAKE_CXX_STANDARD 14)
#SET(CMAKE_BUILD_TYPE Debug)
add_executable(ray_tracing main.cpp vec3.h ray.h geometry/hitable.h geometry/sphere.h geometry/hitablelist.h camera.h material/material.h BVH.h material/texture.h utils/s_random.h material/perlin.h utils/stb_image.h geometry/moving_sphere.h geometry/rectangle.h geometry/flip.h geometry/cornell_box.h geometry/translate.h geometry/rotate_y.h geometry/triangle.h include/mingw.thread.h)
