cmake_minimum_required(VERSION 3.5)
project(ray_tracing CXX )
SET(CMAKE_CXX_STANDARD 14)
find_package(CUDA REQUIRED)
if(CUDA_FOUND)
    SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_61,code=sm_61;-std=c++14;)
    cuda_add_executable( ray_tracing main.cu )
else()
    add_executable(ray_tracing main.cpp)
endif(CUDA_FOUND)
